# unemups4

./: .gitignore  .markdownlintignore  .pre-commit-config.yaml  .prettierignore  AGENTS.md  Cargo.toml  README.md  clippy.toml  deny.toml  flake.nix
.claude/worktrees/agent-adbc062b4a2eaf0a3/: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  flake.nix
.claude/worktrees/agent-adbc062b4a2eaf0a3/app/unemups4/: Cargo.toml
.claude/worktrees/agent-adbc062b4a2eaf0a3/backlog/decisions/: decision-1 - Adopt agentic-project-template into existing GPL-3 repo.md  decision-2 - Pin-x86jit-as-local-git-dependency-at-a-fixed-rev.md  decision-3 - GPU-direction-Bloodborne-north-star-phased-PM4-path-portable-Vulkan.md  decision-4 - GPU-work-flows-through-GpuBackend-trait-and-phased-ps4-gnm-ps4-gcn-seams.md  decision-5 - Loader-pipeline-all-executable-loading-flows-through-Container-ParsedImage-DynamicSource-load_image.md  decision-6 - Phase-4-architecture-GCN-decode→interp→recompiler-resource-cache-state-model.md  decision-7 - BackendCmd-pipeline-shape-guest-minted-PipelineId-CreatePipeline-carrying-Arc-u32-SPIR-V.md
.claude/worktrees/agent-adbc062b4a2eaf0a3/backlog/docs/: architecture.md  commands.md  decisions.md  deferred.md  doc-1 - x86jit-Migration-Plan.md  doc-2 - GPU-approach-research.md  doc-3 - OpenOrbis-graphics-shader-capabilities.md  doc-4 - GPU-subsystem-architecture.md  doc-5 - loader-architecture.md  doc-6 - Retail-title-bring-up-—-the-smoke-loop-method.md  doc-7 - Retail-bring-up-casebook-—-worked-debugging-examples.md  glossary.md  readme.md  status.md  working-on-tasks.md
.claude/worktrees/agent-adbc062b4a2eaf0a3/backlog/tasks/: task-1 - Capture-native-baselines-wire-x86jit-path-dependency.md  task-10 - Guest-fault-diagnostics-polish.md  task-100 - kernel-fs-filesystem-mutation-syscalls-mkdir-rmdir-unlink-rename-—-Doom-config-savegame-gap.md  task-102 - kernel-fs-real-sandbox-containment-—-canonicalize-prefix-check-symlink-escape.md  task-103 - gpu-dump_png-R-B-channel-swap-wrong-on-videoout-guest-framebuffer-present-path.md  task-104 - input-physical-gamepad-via-gilrs-expanded-keyboard-map-—-playable-Doom.md  task-105 - gnm-videoout-sceVideoOutGetFlipStatus-must-report-flipArg-—-guest-flip-loop-spun-1M-frame-throttling-everything.md  task-106 - cpu-syscall-abi-SYSCALL-clobbers-RCX-—-move-4th-arg-via-R10-x86jit-became-hardware-correct.md  task-107 - gnm-audio-sceAudioOut-HLE-—-play-guest-PCM-Init-Open-Output-Close-so-Doom-SFX-are-audible-in-unemups4.md  task-108 - libs-audio-real-cross-platform-host-audio-sink-for-sceAudioOut-make-Doom-audible-in-unemups4.md  task-109 - audio-consumer-clocked-sceAudioOutOutput-pacing-—-fix-Doom-music-stretch-clicks.md  task-11 - Guest-resident-errno-slot-sys_errno-returns-host-pointer.md  task-110 - audio-per-stream-prime-cushion-state-—-global-PRIMED-single-ring-break-multi-handle-sceAudioOut.md  task-111 - audio-recover-to-wall-clock-pacing-on-host-DAC-loss-HOST_SINK_OK-never-cleared.md  task-113 - retail-bring-up-Celeste-FNA-—-first-real-input-target.md  task-113.1 - loader-unencrypted-SELF-container-unwrapper-zero-crypto.md  task-113.2 - diag-why-did-it-stop-reporter-missing-symbol-unmapped-addrVMA-unknown-instr.md  task-113.3 - retail-FASE-2-native-runtime-bring-up-to-managed-entry-smoke-loop-milestone.md  task-113.4 - retail-FASE-3-framework-platform-interop-—-first-real-engine-GNM-frame-audio.md  task-113.5 - retail-FASE-4-correctness-playability-loop.md  (+78 more)
.claude/worktrees/agent-adbc062b4a2eaf0a3/screenshots/: README-softgpu-x86jit.md
.claude/worktrees/agent-adbc062b4a2eaf0a3/scripts/: diff_backends.sh  uid-guard.sh
crates/core/: Cargo.toml
crates/core/src/: breadcrumb.rs  clock.rs  debug.rs  dirty.rs  errno.rs  exectrace.rs  fs.rs  gpu.rs  guest_ptr.rs  img.rs  kernel.rs  lib.rs  memory.rs  pad.rs  registered.rs  snapshot.rs  tiling.rs  videoout.rs  write_guest.rs
crates/gcn/: Cargo.toml
crates/gcn/examples/: dump_disasm.rs
crates/gcn/src/: cfg.rs  decoder.rs  disasm.rs  fetch_call.rs  fetch_shader.rs  inst.rs  interp.rs  lib.rs  opcodes.rs  operand.rs  recompile.rs  uop.rs
crates/gcn/tests/: corpus.rs  decode.rs  differential.rs  interp.rs  recompile.rs
crates/gcn/tests/corpus/: .gitignore  cbranch_alpha_ps.dis  cbranch_alpha_ps.s  cbranch_alpha_ps.sb  cbranch_select_ps.dis  cbranch_select_ps.s  cbranch_select_ps.sb  cbuffer16_vs.dis  cbuffer16_vs.s  cbuffer16_vs.sb  cbuffer_ps.dis  cbuffer_ps.s  cbuffer_ps.sb  cmp_cndmask_ps.dis  cmp_cndmask_ps.s  cmp_cndmask_ps.sb  fetch_pos_vs.s  fetch_vs.s  index_tri_inplace_vs.s  index_tri_vs.s  inline_fetch_vs.dis  inline_fetch_vs.s  inline_fetch_vs.sb  inline_multi_fetch_vs.s  interp_color_ps.dis  interp_color_ps.s  loop_accum_ps.dis  loop_accum_ps.s  loop_accum_ps.sb  m0_save_ps.dis  m0_save_ps.s  m0_save_ps.sb  minmax_shift_ps.dis  minmax_shift_ps.s  minmax_shift_ps.sb  nonstd_stride_vs.s  offset_fetch_vs.s  passthrough_vs.s  passthrough_vs.sb  pkrtz_ps.dis  (+39 more)
crates/gcn/tests/recompile_golden/: flat_color_ps.spvasm  interp_color_ps.spvasm  passthrough_vs.spvasm
crates/gcn/tests/spirv_eval/: mod.rs
crates/gnm/: Cargo.toml
crates/gnm/shaders/: embedded_fullscreen.vert  embedded_rg_export.frag  embedded_rg_export.frag.spv
crates/gnm/src/: derive.rs  driver.rs  exec.rs  free_sink.rs  idmem.rs  lib.rs  profile.rs  snapshot.rs  state.rs  texdump.rs  vbuf.rs
crates/gnm/src/cache/: mod.rs  tests.rs  tile.rs
crates/gnm/src/pm4/: decode.rs  emit.rs  mod.rs  opcodes.rs  trace.rs
crates/gnm/src/shader/: embedded.rs  fetch.rs  gcn.rs  mod.rs  pipeline_cache.rs  sb.rs  source.rs
crates/gnm/tests/: corpus_load.rs
crates/gpu/: Cargo.toml
crates/gpu/shaders/: frag.spv  shader.frag  shader.vert
crates/gpu/src/: backend.rs  buffer_pool.rs  commands.rs  display.rs  gamepad.rs  lib.rs  present_profile.rs  vulkan.rs
crates/memory/: Cargo.toml
crates/memory/src/: vm_backend.rs
crates/memory/tests/: parse_sb_fault_safety.rs  vm_backend.rs
tools/ps4-gnm-scrape/host/: Cargo.toml
tools/ps4-gnm-scrape/host/src/: json.rs  lib.rs
(+494 files in other folders)
