[package]
name = "ps4-libs"
version = "0.1.0"
edition = "2024"

[dependencies]
ps4-syscalls = { path = "../syscalls" }
ps4-macros = { path = "../macros" }
ps4-core= { path = "../core" }
ps4-cpu = { path = "../cpu" }
ps4-gnm = { path = "../gnm" }

inventory.workspace = true
libc.workspace = true
tracing.workspace = true
cpal.workspace = true

[dev-dependencies]
# Enable ps4-core's test-only reset hooks so the shader-set regression can exercise both
# the wired (bounds-checked) and headless paths in one process.
ps4-core = { path = "../core", features = ["test-hooks"] }
